--- a/Layout4/styles4.css
+++ b/Layout4/styles4.css
@@ -6,32 +6,45 @@
 }
 header {
   background-color: #111023;
-  flex-basis: 20%;
+  flex-grow: 1;
 }
 #main {
   display: flex;
-  flex-basis: 60%;
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: 50%;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 nav {
-  flex-basis: 20%;
+  flex-grow: 1;
   background-color: #c22177;
 }
 article {
-  flex-basis: 80%;
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: 50%;
   background-color: white;
 }
 aside {
-  flex-basis: 20%;
+  flex-grow: 1;
   background-color: #320388;
 }
 footer {
-  flex-basis: 20%;
+  flex-grow: 1;
   background-color: #111023;
 }
 
+@media screen and (min-width: 601px) and (max-width: 1024px) {
+  /* Tablet CSS */
+  nav {
+    width: 100%;
+  }
+}
+
 @media screen and (max-width: 600px) {
-  #container {
+  /* Mobile CSS */
+  #main {
     flex-direction: column;
   }
 }
